--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  box-sizing: border-box;
+  width: 100vw;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,4 +12,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.App {
+  box-sizing: border-box;
+}
+
+#root {
+  box-sizing:border-box;
+  width: 100%;
 }
